@@ -1,3 +1,15 @@
+2006-12-15  MorganL  <morganl.webkit@yahoo.com>
+
+        Reviewed by Oliver.
+
+        Allow images to load into frames again.  Tidy up code a bit and
+        add some much needed documentation.
+
+        * platform/MimeTypeRegistry.cpp:
+        (WebCore::initialiseSupportedImageMIMETypes):
+        (WebCore::initialiseSupportedNonImageMimeTypes):
+        * platform/MimeTypeRegistry.h:
+
 2006-12-15  Anders Carlsson  <acarlsson@apple.com>
 
         Fix build.
